--- a/_posts/2024-06-07-using.webpage.md
+++ b/_posts/2024-06-07-using.webpage.md
@@ -1,5 +1,5 @@
-# Using Webpage
-### By Cara Lamina
+# Editing Webpage in GitHub
+### Cara Lamina
 
 Hello! Here are some quick instructions on how to write in Markdown, create posts, embed images and links, and save your work. 
 
@@ -20,9 +20,9 @@ We are **not** using markdown when writing in our _config.yml file, because this
 
 Let's talk about how to create posts themselves. 
 
-1. Go to your GitHub Dashboard and enter into the repository (found the the page's left hand side). 
-
 Repositories are where you can store you code, your files, and each file's history. You can have multiple collaborators in one repository. We will eventually be posting all our posts into a single repository for them to appear on one webpage. 
+
+1. Go to your GitHub Dashboard and enter into the repository (found the the page's left hand side). 
 
 2. Once you have entered your repository, click on the posts folder. 
 
@@ -40,10 +40,46 @@ In the cospace developer, you want to sync your updates to GitHub.
 
 3. Go back to your repository on GitHub and select the *Actions* tab at the top of the page. This allows you to monitor how the update you sent over from the developer is syncing to GitHub. Once the action is completed, you can refresh your webpage and view your updated changes!
 
-Good job! Let's move on to embeding images into your posts!
+Good job—let's move on to embeding images into your posts!
 
 ## Embedding Images
 
 Images are an important tool to use in digital communication—whether you are presenting your reader with a visualization of your research or want to share a cute image of your pet. For example, here is a cute image of my pet, Honey!
+
+![](/assets/image/honeyyard.png)
+
+How did I upload such an awesome image? Glad you asked! There are two ways we are gonna look at to see how to upload images. 
+
+### Upload from your computer
+
+1. Select the *Explorer* tab on the left side of your cospace developer. This is the first icon that resembles two pages of paper. 
+
+2. Open *assets* > *image*
+
+3. Double click or control click on the *image* file and select *Upload...*
+
+4. Upload your image to the file (you can rename your file here by doubel clicking/control clicking on the file and clicking *Rename*).
+
+5. Now that your image is uploaded to the cospace developer, we can direct the program toward your image using markdown. 
+
+![](/assets/image/*your file name*)
+
+This directs the program to the *assests* > *image* > your selected image. 
+
+### Use image from web
+
+If you are using images from the web, make sure they are royaltly free. I like using [Unsplash](https://unsplash.com/).
+
+1. Go to the web and select your desired image.
+
+2. Double click or control click on the image and select *Copy Image Address*. 
+
+3. Direct the program to your image on the web by writing, inserting your image adress in between the parentheses. 
+
+![](*image address*)
+
+Once again, you will need to commit these changes to synce them to GitHub. Select *Source Control*, label your change, and hit *Commit & Push* to sync. 
+
+## Embedding Links
 
 
