--- a/_posts/2024-06-07-using.webpage.md
+++ b/_posts/2024-06-07-using.webpage.md
@@ -26,7 +26,7 @@ Repositories are where you can store you code, your files, and each file's histo
 
 2. Once you have entered your repository, click on the posts folder. 
 
-3. Next, hit *Add file* > *Create new file*. 
+3. Next, hit *Add file* > *Create new file*. You will want to title your file YEAR-MM-DY-titleofyourpost.md. 
 
 4. Once you have entered your new file, press the *period* button to enter into cospace developer. Here, you will be able to write your posts in markdown!
 
@@ -80,6 +80,20 @@ If you are using images from the web, make sure they are royaltly free. I like u
 
 Once again, you will need to commit these changes to synce them to GitHub. Select *Source Control*, label your change, and hit *Commit & Push* to sync. 
 
+Let's talk about embedding links onto our webpages. 
+
 ## Embedding Links
 
+Embedding links into your post can allow you to easily direct your reader to other sources or to share other pieces of your work on other websites. 
 
+1. Copy your desired *url* from the web. 
+
+2. Write the following markdown, titling the hyperlink in between the brackets and pasting the *url* in the following parentheses.
+
+![](/assets/image/url.png) 
+
+And you are gonna want to sync your changes to GitHub. Select *Source Control* label your change, and hit *Commit & Push* to sync. 
+
+Amazing work! Now you know how to create posts, insert images, and embed links. 
+
+[](<iframe src="https://giphy.com/embed/3o85xsz5nqVjzphbZC" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/bustle-3o85xsz5nqVjzphbZC">via GIPHY</a></p>)
