--- a/_posts/2024-06-07-using.webpage.md
+++ b/_posts/2024-06-07-using.webpage.md
@@ -96,4 +96,4 @@ And you are gonna want to sync your changes to GitHub. Select *Source Control* l
 
 Amazing work! Now you know how to create posts, insert images, and embed links. 
 
-[](<iframe src="https://giphy.com/embed/3o85xsz5nqVjzphbZC" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/bustle-3o85xsz5nqVjzphbZC">via GIPHY</a></p>)
+![](<iframe src="https://giphy.com/embed/3o85xsz5nqVjzphbZC" width="480" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/bustle-3o85xsz5nqVjzphbZC">via GIPHY</a></p>)
